--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,10 +1,10 @@
-*{
+/* *{
   background-color: pink;
-}
+} */
 
-body {
+/* body {
     background: red;
-  }
+  } */
 
   .navbar {
     display: -webkit-box;
