--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -24,7 +24,8 @@
               <input type="submit" class="btn btn-primary btn-sm" value="Login">
             </div>
 
-            <input type="hidden" name="next" value="{{next}}">
+            <input type="hidden" name="next" value="{% url 'index' %}">
+            <p>Don't have an account? <a href="/accounts/register/" class="btn btn-default">Sign Up</a></p>
 
           </form>
 
