--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -15,7 +15,8 @@
       <a href=""><i style="color:black;" class="fa fa-align-justify fa-2x"></i></a>
       <a href=""><i style="color:black;" class="fa fa-pencil-alt fa-2x"></i></a>
       <a href="{% url "profile" %}"><i style="color:black;" class="fa fa-user fa-2x">EDIT</i></a>
-      <a href=""><i style="color:black;" class="fa fa-sign-out-alt fa-2x"></i></a>
+      <a href="/logout"><i style="color:black;" class="fa fa-sign-out-alt fa-2x">LOGOUT</i></a>
+
       </section>
   </nav>
   <!-- {% endif %} -->
