--- a/app/templates/new_image.html
+++ b/app/templates/new_image.html
@@ -15,13 +15,21 @@
 </head>
 
 <body>
+<div class="container">
+  <div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      <form  action="{%url 'add_photo'%}" method="post" enctype="multipart/form-data">
+        {%csrf_token%}
 
-  <form  action="{%url 'add_photo'%}" method="post" enctype="multipart/form-data">
-    {%csrf_token%}
+        {% bootstrap_form form %}
+        <input type="submit" class="btn btn-success btn-lg" value="Post">
+      </form>
+    </div>
+    <div class="col-md-2"></div>
+  </div>
+</div>
 
-    {% bootstrap_form form %}
-    <input type="submit" class="btn btn-success btn-lg" value="Post">
-  </form>
 
    {% block scripts %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
