--- a/app/templates/new_image.html
+++ b/app/templates/new_image.html
@@ -19,7 +19,7 @@
   <div class="row">
     <div class="col-md-2"></div>
     <div class="col-md-8">
-      <form  action="{%url 'add_photo'%}" method="post" enctype="multipart/form-data">
+      <form  action="{%url 'add_photo'%}" method="POST" enctype="multipart/form-data">
         {%csrf_token%}
 
         {% bootstrap_form form %}
