--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,11 +5,24 @@
 
 {% block content %}
 {{block.super}}
-<div class="container">
+<div class="container" style="margin-top:120px;">
   <div class="col-md-3"></div>
   <div class="col-md-6">
     {% for image in images %}
+
+    {% for profile in profiles %}
+
+      <!-- <img src="{{image.profile.profileP}}"> -->
+      <div><img src='{{image.profile.profilePhoto.url}}' style='width:40px;height:40px;border-radius: 50%;float:left;margin:10px;'><div style='float:left;margin:10px;margin-top:20px;'><strong>{{image.user.username}}</strong></div></div>
+
+      <!-- <a href="">{{image.profile.bio}}</a> -->
+
+      <a href="">{{image.user.username}}</a>
+
+<a href="{% url 'imagedetails' id=image.id %}">
+
       <img src="{{image.image.url}}" alt="">
+    </a>
       <p>{{image.user}}</p>
       <a href="{% url 'comment' image_id=image.id %}" style="color:inherit;"><i class="far fa-comment fa-2x ml-4"></i></a>
       <a id="like" href="{% url 'likephoto' id=image.id%}" style="color:inherit;">
@@ -43,6 +56,7 @@
 
 
                                           </div>
+                                          {% endfor %}
 
     {% endfor %}
     <!-- {% for comment in comments %} -->
