--- a/app/templates/image_details.html
+++ b/app/templates/image_details.html
@@ -21,9 +21,12 @@
       </header>
       <p style="margin-top:10px;font-weight:bolder; font-size:16px">{{image.likes}} Likes</p><br>
       <h3 style="text-decoration:underline">Comments</h3>
-      <!-- {% for com in image.comment %} -->
-      <p style="margin-bottom:-1px"><span style=" margin-right:10px; font-weight:bolder; font-size:16px"></span>{{image.comment}}</p>
-      <!-- {% endfor %} -->
+      {% for comment in comments %}
+      {% if comment.image_id == image.id %}
+
+      <p style="margin-bottom:-1px"><span style=" margin-right:10px; font-weight:bolder; font-size:16px">{{comment.user}}</span>{{comment.comment}}</p>
+      {% endif %}
+      {% endfor %}
       <hr>
     </div>
   </div>
