searrch functionality partly working

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -8,8 +8,8 @@
     <section class="logo-section"><img class="logo" src="https://seeklogo.com/images/I/instagram-new-2016-glyph-logo-84CB825424-seeklogo.com.png"/>
       <div></div><a href=""><img class="logoname" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/2000px-Instagram_logo.svg.png"/></a>
     </section>
-    <form class="search-section" role="search" action="">
-      <input class="input-search" type="search" name="username" placeholder="Search Username"/>
+    <form class="search-section" role="search" action="{% url 'searching' %}">
+      <input class="input-search" type="search" name="caption" placeholder="Search images"/>
     </form>
     <section class="icons-section" >
       <a href="{% url "add_photo" %}"><i style="color:black;" class="fa fa-pencil-alt fa-2x"></i></a>
