image serach fixed

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,12 +1,13 @@
 
 {% load bootstrap4 %}
 {% load static %}
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 <!-- {% if user.is_authenticated %} -->
 <nav class="navbar fixed-top">
     <section class="logo-section"><img class="logo" src="https://seeklogo.com/images/I/instagram-new-2016-glyph-logo-84CB825424-seeklogo.com.png"/>
-      <div></div><a href=""><img class="logoname" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/2000px-Instagram_logo.svg.png"/></a>
+      <div></div><a href="{% url "index" %}"><img class="logoname" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/2000px-Instagram_logo.svg.png"/></a>
     </section>
     <form class="search-section" role="search" action="{% url 'searching' %}">
       <input class="input-search" type="search" name="caption" placeholder="Search images"/>
