--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {%extends 'base.html'%}
 {% load static %}
 {% load bootstrap4 %}
-
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
 {% block content %}
 {{block.super}}
@@ -19,7 +19,7 @@
       <img src="{{image.image.url}}" alt="">
     </a>
       <p>{{image.user}}</p>
-      <a href="{% url 'comment' image_id=image.id %}" style="color:inherit;"><i class="far fa-comment fa-2x ml-4"></i></a>
+      <a href="{% url 'comment' image_id=image.id %}" style="color:inherit;"><i class="far fa-comment-alt"></i></a>
       <a id="like" href="{% url 'likephoto' id=image.id%}" style="color:inherit;">
                                                                              <i class="far fa-heart fa-2x ml-4"></i>
                                                                      </a>
@@ -53,7 +53,7 @@
                                           </div>
                                           {% endfor %}
 
-    
+
   </div>
   <div class="col-md-3"></div>
 
