add and style ionic icons

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -6,6 +6,10 @@
     background: red;
   } */
 
+.ionic {
+  font-size: 30px;
+  color:black;
+}
   .navbar {
     display: -webkit-box;
     display: -ms-flexbox;
