--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,66 +1,68 @@
-{%extends 'base.html'%}
-{% load static %}
-{% load bootstrap4 %}
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
-{% block content %}
-{{block.super}}
+{%extends 'base.html'%} {% load static %} {% load bootstrap4 %}
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"> {% block content %} {{block.super}}
 <div class="container" style="margin-top:120px;">
   <div class="col-md-3"></div>
   <div class="col-md-6">
     {% for image in images %}
 
+    <div class="card style="margin-bottom:100px;"">
+      <div class="card-header">
+        <img src="{{image.image.url}}" alt="" style="height:50px;width:50px; border-radius:50%">
+                <p style="display:inline; margin-left:10px; font-weight:bolder; font-size:16px">{{image.user}}</p>
+      </div>
+      <a href="{% url 'imagedetails' id=image.id %}">
+
+        <div class="card-body">
+          <img src="{{image.image.url}}" alt="" class="img-responsive img-fluid" style=" width:700px;height:340px;">
+
+        </div>
+      </a>
+      <div id="likes">
+
+        <!-- <p>{{image.user}}</p> -->
+        <a href="{% url 'comment' image_id=image.id %}" style="color:inherit;"><i class="far fa-comment fa-2x ml-4"></i></a>
+
+        <a id="like" href="{% url 'likephoto' id=image.id%}" style="color:inherit;"><i class="far fa-heart fa-2x ml-4"></i>
+          </a> {% if image.likes %}
+        <div class="row">
+          <p class="ml-5"><b>{{image.likes}} Likes</b></hp>
+        </div>
+        {% endif %} {% if comments %} {% for comment in comments %} {% if comment.image_id == image.id %}
+
+        <div>
+          <p class="ml-4"> <strong> {{comment.user.username}} </strong> {{comment.comment}}
+          </p>
+        </div>
+        {% else %} {% endif %} {% empty%}
+        <p>No comments yet</p>
+        {% endfor %} {% endif %}
+        <h6 class="ml-4">{{ image.timestamp | timesince | upper }} AGO</h6>
 
 
-      <a href="">{{image.user.username}}</a>
+      </div>
 
-<a href="{% url 'imagedetails' id=image.id %}">
+    </div>
+    <br>
+    <br>
 
-      <img src="{{image.image.url}}" alt="">
-    </a>
-      <p>{{image.user}}</p>
-      <a href="{% url 'comment' image_id=image.id %}" style="color:inherit;"><i class="far fa-comment-alt"></i></a>
-      <a id="like" href="{% url 'likephoto' id=image.id%}" style="color:inherit;">
-                                                                             <i class="far fa-heart fa-2x ml-4"></i>
-                                                                     </a>
-                                                                    <div>
+    <div>
 
-                                                                      {% if image.likes %}
-                                                <div class="row">
-                                                        <h5 style=""><b>{{image.likes}} Likes</b></h5>
-                                                </div>
-                                                {% endif %}
-                                                                    </div>
-      <div class="">                           {% if comments %}
-                                              {% for comment in comments %}
-                                              {% if comment.image_id == image.id %}
 
-                                              <div >
-                                                  <p> <strong> {{comment.user.username}} </strong>
-                                                  {{comment.comment}}</p>
-                                              </div>
-                                              {% else %}
-
-                                              {% endif %}
-                                              {% empty%}
-                                              <p>No comments yet</p>
-                                              {% endfor %}
-
-                                              {% endif %}
+    </div>
+    <div class="">
 
 
 
-                                          </div>
-                                          {% endfor %}
+    </div>
+    {% endfor %}
 
 
   </div>
   <div class="col-md-3"></div>
+  <br>
+  <br><br>
 
 
-</div
+</div <br>
 <br>
-<br>
-<br>
-
-{% endblock %}
+<br> {% endblock %}
