--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,37 +1,40 @@
 
 {% load bootstrap4 %}
 {% load static %}
-<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 <!-- http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css -->
 
  <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-<!-- <link rel="stylesheet" href= integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"> -->
-<!-- {% if user.is_authenticated %} -->
+{% if user.is_authenticated %}
 <nav class="navbar fixed-top">
 <div class="container">
     <section class="logo-section"><a href="{% url "index" %}"><img class="logo" src="https://seeklogo.com/images/I/instagram-new-2016-glyph-logo-84CB825424-seeklogo.com.png"/></a>
       <div></div><a href="{% url "index" %}"><img class="logoname" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/2000px-Instagram_logo.svg.png"/></a>
     </section>
-    <form class="search-section" role="search" action="{% url 'searching' %}">
-      <input class="input-search" type="search" name="caption" placeholder="Search images"/>
-    </form>
+
+
+    <form class="navbar-form" role="search" action="{% url 'searching' %}" style="width:auto">
+
+       <div class="input-group">
+         <input type="text" class="form-control" placeholder="Search Images" name="caption" style="height:38px;">
+         <div class="input-group-btn">
+           <button class="btn" type="submit" style="height:39px; width:39px;"><i class="glyphicon glyphicon-search"></i></button>
+         </div>
+       </div>
+
+     </form>
     <section class="icons-section" >
-      <!-- <a href="{% url "add_photo" %}"><i style="color:black;" class="fa fa-pencil-alt fa-2x"></i></a> -->
 
       <a href="{% url "add_photo"%}"><ion-icon name="add" class="ionic"></ion-icon></a>
-      <!-- <a href="{% url "profile" %}"><i style="color:black;" class="fa fa-user fa-2x"></i></a> -->
       <a href="{% url "profile" %}"><ion-icon name="contact" class="ionic"></ion-icon></a>
-      <!-- <a href="/logout"><i style="color:black;" class="fa fa-sign-out-alt fa-2x"></i></a> -->
-      <!-- <a href="/logout"><i style="color:black;" class="fa fa-sign-out-alt fa-2x"></i></a> -->
+
       <a href="/logout"><ion-icon name="log-out" class="ionic"></ion-icon></a>
-<!-- <ion-icon name="log-out"></ion-icon> -->
 
 </section>
     </div>
   </nav>
-  <!-- {% endif %} -->
+  {% endif %}
 <script src="https://unpkg.com/ionicons@4.4.4/dist/ionicons.js"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
