--- a/app/templates/new_image.html
+++ b/app/templates/new_image.html
@@ -15,18 +15,18 @@
 </head>
 
 <body>
-<div class="container">
+<div class="container" style="margin-top:40px;">
   <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-8">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
       <form  action="{%url 'add_photo'%}" method="POST" enctype="multipart/form-data">
         {%csrf_token%}
 
         {% bootstrap_form form %}
-        <input type="submit" class="btn btn-success btn-lg" value="Post">
+        <input type="submit" class="btn btn-info btn-block" value="Post">
       </form>
     </div>
-    <div class="col-md-2"></div>
+    <div class="col-md-3"></div>
   </div>
 </div>
 
