--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -1,7 +1,7 @@
 {%extends "registration/base.html"%}
 {% load bootstrap4 %}
 {% block content %}
-<div class="container">
+<div class="container" style="margin-top:100px;">
   <div class="row">
     <!-- Empty div -->
     <div class="col-md-4"></div>
@@ -9,7 +9,7 @@
       {% if form.errors %}
         <p> Password or Username is incorrect </p>
       {% endif %}
-      <div class="container" style="margin-left:20%; margin-bottom:20px">
+      <div class="container text-center" style="margin;auto;">
         </a>
       </h1>
           <div class="logoname" style="display:inline">
@@ -17,12 +17,12 @@
           </div>
 
       </div>
-      <div class="panel panel-default">
+      <div class="card">
 
-        <div class="panel-heading">
+        <div class="card-header">
           <h3 class="text-center">Sign In</h3>
         </div>
-        <div class="panel-body">
+        <div class="card-body">
 
           <form  action="/accounts/login/" method="post">
             {% csrf_token %}
