--- a/app/templates/image_details.html
+++ b/app/templates/image_details.html
@@ -14,17 +14,17 @@
       <div class="like" style="font-size:30px">
       </div>
       <header style="margin-top:20px; border-bottom: 1px solid #ddd">
-        <p style="float:left; margin-right:20px; margin-top:20px; font-weight:bolder">Uploaded By:</p>
+        <p style="float:left; margin-right:20px; margin-top:20px; font-weight:bolder">Posted By :</p>
         <img src="{{image.image.url}}" alt="" style="height:50px;width:50px; border-radius:50%">
         <p style="display:inline; margin-left:10px; font-weight:bolder; font-size:16px; margin-bottom:10px">{{image.user}}</p>
         <p style="font-size:12px;color:grey; margin-top:10px">{{image.timestamp|timesince|upper}} ago</p>
       </header>
-      <p style="margin-top:10px;font-weight:bolder; font-size:16px">{{image.likes}} Likes</p><br>
-      <h3 style="text-decoration:underline">Comments</h3>
+      <p style="margin-top:6px;font-size:16px">{{image.likes}} <span style="">Likes</span></p><br>
+      <p style=""><strong>Comments</strong></p>
       {% for comment in comments %}
       {% if comment.image_id == image.id %}
 
-      <p style="margin-bottom:-1px"><span style=" margin-right:10px; font-weight:bolder; font-size:16px">{{comment.user}}</span>{{comment.comment}}</p>
+      <p style=""><span style=" margin-right:10px; font-weight:bolder; font-size:14px">{{comment.user}}</span>{{comment.comment}}</p>
       {% endif %}
       {% endfor %}
       <hr>
