--- a/app/templates/registration/registration_form.html
+++ b/app/templates/registration/registration_form.html
@@ -8,7 +8,7 @@
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 {% if form.errors %}
-                    <p>Some Information Might Be Incorrect</p>
+                    <p class="text-center">Some Information Might Be Incorrect</p>
                 {% endif %}
                 <div class="card card-default">
                     <div class="card-header">
