--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -17,7 +17,7 @@
     <form class="navbar-form" role="search" action="{% url 'searching' %}" style="width:auto">
 
        <div class="input-group">
-         <input type="text" class="form-control" placeholder="Search Images" name="caption" style="height:38px;">
+         <input type="text" class="form-control" placeholder="Search users" name="username" style="height:38px;">
          <div class="input-group-btn">
            <button class="btn" type="submit" style="height:39px; width:39px;"><i class="glyphicon glyphicon-search"></i></button>
          </div>
