--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -3,11 +3,11 @@
 <div class="container" style="margin-top:120px;">
 
   <div class="row">
-    {% if images %}
-      <h2 class="text-center" style="color:black">Found {{ images|length }} Images of search term : <em>{{message}}</em> </h2>
+    {% if users %}
+      <h2 class="text-center" style="color:black">Found {{ users|length }} User of search term : <em>{{message}}</em> </h2>
       <hr>
     {% else %}
-      <h2 style="color:black"> Found 0 images for the search term {{message}}</h2>
+      <h2 style="color:black"> Found 0 users for the search term {{message}}</h2>
       <hr>
     {% endif %}
 
@@ -17,12 +17,12 @@
 
   <!-- {% if images %} -->
 <hr>
-    {% for image in images %}
+    {% for user in users %}
     <a href="#">
       <div class="col-md-4 img-cont">
         <img src="{{ image.image.url }}" class="img-responsive i-images">
         <div class="overlay">
-          <div class="text">{{image.caption}}</div>
+          <div class="text">{{user.user.username}}</div>
         </div>
       </div>
     </a>
