--- a/app/templates/registration/registration_form.html
+++ b/app/templates/registration/registration_form.html
@@ -2,10 +2,13 @@
 {% load bootstrap4 %}
 {% block content %}
 {{block.super}}
-<div class="mybg">
-    <div class="container">
+<div class="register">
+    <div class="container" style="margin-top:40px;">
         <div class="row">
-            <div class="col-md-3"></div>
+            <div class="col-md-6">
+              <img src="/static/images/insta.png" alt="">
+
+            </div>
             <div class="col-md-6">
                 {% if form.errors %}
                     <p class="text-center">Some Information Might Be Incorrect</p>
