signup authentication added

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -27,9 +27,9 @@
     <section class="icons-section" >
 
       <a href="{% url "add_photo"%}"><ion-icon name="add" class="ionic"></ion-icon></a>
-      <!-- <a href="{% url "profile" %}"><ion-icon name="contact" class="ionic"></ion-icon></a> -->
+      <a href="{% url "profile" %}"><ion-icon name="contact" class="ionic"></ion-icon></a>
       <!-- <a class="nav-link open-nav" href="{% url 'profiles' username=user %}"></a> -->
-      <a href="{% url "profiles" username=user %}"><ion-icon name="contact" class="ionic"></ion-icon></a>
+      <!-- <a href="{% url "profiles" username=user %}"><ion-icon name="contact" class="ionic"></ion-icon></a> -->
 
 
 
