--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -33,7 +33,9 @@
             </div>
 
             <input type="hidden" name="next" value="{% url 'index' %}">
+            <!-- <p>Don't have an account? <a href="/accounts/register/" class="btn btn-default">Sign Up</a></p> -->
             <p>Don't have an account? <a href="/accounts/register/" class="btn btn-default">Sign Up</a></p>
+
 
           </form>
 
