style the signup form

--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -34,7 +34,7 @@
 
             <input type="hidden" name="next" value="{% url 'index' %}">
             <!-- <p>Don't have an account? <a href="/accounts/register/" class="btn btn-default">Sign Up</a></p> -->
-            <p>Don't have an account? <a href="/accounts/register/" class="btn btn-default">Sign Up</a></p>
+            <p>Don't have an account? <a href="/signup/" class="btn btn-default">Sign Up</a></p>
 
 
           </form>
