--- a/app/templates/registration/signup.html
+++ b/app/templates/registration/signup.html
@@ -1,21 +1,44 @@
 {%extends "registration/base.html"%}
 {% load bootstrap4 %}
 {% block content %}
-  <h2>Sign up</h2>
-  <form method="post">
-    {% csrf_token %}
-      {% for field in form %}
-      <p>
-        {{ field.label_tag }}<br>
-        {{ field }}
-        {% if field.help_text %}
-          <small style="display: none">{{ field.help_text }}</small>
-        {% endif %}
-        {% for error in field.errors %}
-          <p style="color: red">{{ error }}</p>
-        {% endfor %}
-      </p>
-      {% endfor %}
-    <button type="submit">Sign up</button>
-  </form>
+
+  <div class="register">
+      <div class="container" style="margin-top:40px;">
+          <div class="row">
+              <div class="col-md-6">
+                <img src="/static/images/insta.png" alt="">
+
+              </div>
+              <div class="col-md-6">
+                  {% if form.errors %}
+                      <p class="text-center">Some Information Might Be Incorrect</p>
+                  {% endif %}
+                  <div class="card card-default">
+                      <div class="card-header">
+                          <h3 class="text-center">SIGN UP</h3>
+                      </div>
+                      <div class="card-body">
+                        <h2>Sign up</h2>
+                        <form method="post">
+                          {% csrf_token %}
+                            {% for field in form %}
+                            <p>
+                              {{ field.label_tag }}<br>
+                              {{ field }}
+                              {% if field.help_text %}
+                                <small style="display: none">{{ field.help_text }}</small>
+                              {% endif %}
+                              {% for error in field.errors %}
+                                <p style="color: red">{{ error }}</p>
+                              {% endfor %}
+                            </p>
+                            {% endfor %}
+                          <button type="submit">Sign up</button>
+                        </form>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-3"></div>
+          </div>
+      </div>
 {% endblock %}
