--- a/app/templates/registration/signup.html
+++ b/app/templates/registration/signup.html
@@ -19,7 +19,7 @@
                       </div>
                       <div class="card-body">
                         <h2>Sign up</h2>
-                        <form method="post">
+                        <form method="POST">
                           {% csrf_token %}
                             {% for field in form %}
                             <p>
