--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -20,7 +20,7 @@
                       </div>
                       <div class="card-body" style="padding-left:80px;">
                         <!-- <h2>Sign up</h2> -->
-                        <form method="post" style="width:600px;">
+                        <form method="POST" style="width:600px;">
                           {% csrf_token %}
                             {% for field in form %}
                             <p>
