--- a/app/templates/image_details.html
+++ b/app/templates/image_details.html
@@ -4,7 +4,7 @@
 {{block.super}}
 <div class="container">
 
-
+<div class="row">
   <div class="col-sm-3">
 
   </div>
@@ -20,11 +20,11 @@
         <p style="font-size:12px;color:grey; margin-top:10px">{{image.timestamp|timesince|upper}} ago</p>
       </header>
       <p style="margin-top:6px;font-size:16px">{{image.likes}} <span style="">Likes</span></p><br>
-      <p style=""><strong>Comments</strong></p>
+      <p style=""><strong>{{ comments | length}} Comments</strong></p>
       {% for comment in comments %}
       {% if comment.image_id == image.id %}
 
-      <p style=""><span style=" margin-right:10px; font-weight:bolder; font-size:14px">{{comment.user}}</span>{{comment.comment}}</p>
+      <p style=""><span style=" margin-right:16px; font-weight:600; font-size:14px">{{comment.user}}</span>{{comment.comment}}</p>
       {% endif %}
       {% endfor %}
       <hr>
@@ -33,7 +33,7 @@
   <div class="col-sm-3">
 
   </div>
-
+</row>
 
 </div>
 {% endblock %}
