--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -38,6 +38,10 @@
 </section>
     </div>
   </nav>
+  {% else %}
+    <li>
+      <a href="/accounts/login"><i class="material-icons" style="font-size:40px">lock_outline</i></a>
+    </li>
   {% endif %}
 <script src="https://unpkg.com/ionicons@4.4.4/dist/ionicons.js"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
