--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -29,7 +29,7 @@
       <a href="{% url "add_photo"%}"><ion-icon name="add" class="ionic"></ion-icon></a>
       <a href="{% url "userProfiles" %}"><ion-icon name="contact" class="ionic"></ion-icon></a>
 
-      <a href="{% url "profile" %}"><ion-icon name="contact" class="ionic"></ion-icon></a>
+      <!-- <a href="{% url "profile" %}"><ion-icon name="contact" class="ionic"></ion-icon></a> -->
 
 
 
