--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -60,7 +60,7 @@
                     {% if img.image %}
                     <div class="card">
                         <div class="card-header">
-                                <img src="{{img.profile.profilePic.url}}" class="img-fluid rounded-circle" style="width:8%;height:8%">
+                                <img src="{{img.profile.profilePhoto.url}}" class="img-fluid rounded-circle" style="width:8%;height:8%">
                                 {% if user.id == img.user.id %}
                                 <a href="{% url 'profile' %}">{{img.user.username}}</a>
                                 {% else %}
@@ -70,7 +70,7 @@
                         <div class="card-body">
                             {% if img.image.url %}
                                 <img src="{{img.image.url}}" alt="img-fluid" style="width:100%; height:100%">
-                                <p>{{img.caption}}</p>
+                                {{img.caption}}
                                 <p>{{img.timestamp | timesince}} ago</p>
                                 {% if img.likes >= 1 %}
                                 <p><i class="fa fa-heart fa-2x ml-4" style="color:red"></i><b>{{img.likes}} likes</b></p>
