--- a/app/templates/registration/registration_form.html
+++ b/app/templates/registration/registration_form.html
@@ -5,8 +5,11 @@
 <div class="register">
     <div class="container" style="margin-top:40px;">
         <div class="row">
-            <div class="col-md-6">
-              <img src="/static/images/insta.png" alt="">
+            <div class="col-md-4 col-sm-6">
+              <img src="/static/images/instaed.png" alt="" style="width:400px;height:600px;">
+              <!-- https://imageresize.org/view/d99ea48a-24df-41f5-9e8a-110c55a37667 -->
+            </div>
+            <div class="col-md-2">
 
             </div>
             <div class="col-md-6">
