--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
 
   {% if title %}
-  <title>Moringa Tribune - {{title}}</title>
+  <title>Instagram - {{title}}</title>
   {% else %}
     <title> Instagram </title>
   {% endif %}
