--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -7,7 +7,7 @@
 
  <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 {% if user.is_authenticated %}
-<nav class="navbar fixed-top">
+<nav class="navbar fixed-top" id="navbarr">
 <div class="container">
     <section class="logo-section"><a href="{% url "index" %}"><img class="logo" src="https://seeklogo.com/images/I/instagram-new-2016-glyph-logo-84CB825424-seeklogo.com.png"/></a>
       <div></div><a href="{% url "index" %}"><img class="logoname" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/2000px-Instagram_logo.svg.png"/></a>
