--- a/app/templates/registration/registration_form.html
+++ b/app/templates/registration/registration_form.html
@@ -9,10 +9,10 @@
               <img src="/static/images/instaed.png" alt="" style="width:400px;height:600px;">
               <!-- https://imageresize.org/view/d99ea48a-24df-41f5-9e8a-110c55a37667 -->
             </div>
-            <div class="col-md-2">
+            <div class="col-md-1">
 
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-xs-12">
                 {% if form.errors %}
                     <p class="text-center">Some Information Might Be Incorrect</p>
                 {% endif %}
